2007-10-21  Andreas Jaeger  <aj@suse.de>

	* manual/texinfo.tex: Update to latest version.

	* manual/sysinfo.texi (System Parameters): Fix Formatting.

	* manual/arith.texi (Status bit operations): Fix formatting.

	* manual/errno.texi (Error Messages): Fix formatting.

	* manual/sysinfo.texi (System Parameters): Fix formatting.

	* manual/libc.texinfo: Update VERSION and UPDATED.

2007-10-19  Roland McGrath  <roland@redhat.com>

	* elf/Makefile ($(objpfx)ld.so): Use $(AWK).

2007-10-06  David S. Miller  <davem@davemloft.net>

	* configure.in: Add sparcv9v2 and sparc64v2.
	* scripts/config.sub: Likewise.
	* configure: Regenerate.
	* elf/elf.h (HWCAP_SPARC_N2): New.
	* sysdeps/sparc/dl-procinfo.h (_DL_HWCAP_COUNT): Bump to 8.
	* sysdeps/sparc/dl-procinfo.c (_dl_sparc_cap_flags): Add 'v9v2'.
	(HWCAP_IMPORTANT): Add HWCAP_SPARC_N2.
	* sysdeps/sparc/sparc32/sparcv9/sparcv9v2/memcpy.S: New file.
	* sysdeps/sparc/sparc32/sparcv9/sparcv9v2/memset.S: New file.
	* sysdeps/sparc/sparc64/sparcv9v2/memcpy.S: New file.
	* sysdeps/sparc/sparc64/sparcv9v2/memset.S: New file.

2007-10-18  Ulrich Drepper  <drepper@redhat.com>

	* sunrpc/clnt_udp.c (clntudp_call): Don't block in recvfrom call
	even if the poll result indicates there is data to read.
	Patch by Jeff Moyer <jmoyer@redhat.com>.

2007-10-18  Roland McGrath  <roland@redhat.com>

	* elf/elf.h (NT_PPC_VMX): New macro.

2007-10-17  Ulrich Drepper  <drepper@redhat.com>

	* version.h (VERSION): Set to 2.7.90.

2007-10-17  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/x86_64/memset.S (bzero): Renamed to __bzero.  Add
	weak_alias.

2007-10-17  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/bits/fcntl.h [__USE_GNU__] (F_DUPFD_CLOEXEC): New.
	* sysdeps/mach/hurd/fcntl.c (__libc_fcntl): Implement it.

2007-10-17  Ulrich Drepper  <drepper@redhat.com>

	* version.h (VERSION): Bump to 2.7.
	* include/features.h (__GLIBC_MINOR__): Bump to 7.

	[BZ #5186]
	* time/tzset.c (__tz_convert): Don't force testing for a change of