@@ -1,3 +1,8 @@
+2007-10-26  Ulrich Drepper  <drepper@redhat.com>
+
+	* nscd/cache.c (prune_cache): Move test for modified file outside
+	of locking.
+
 2007-10-21  Andreas Jaeger  <aj@suse.de>
 
 	* manual/texinfo.tex: Update to latest version.
